<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/Logo_Image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/car1"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:transitionName="logo_image"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/Logo_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textFontWeight="20"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginLeft="20sp"
        android:transitionName="logo_text"
        android:layout_marginRight="20sp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/full_name"
            android:hint="@string/full_name"
            app:boxStrokeColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="22sp"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="#9f9f9f"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterTextColor="@color/black"
            android:hint="@string/username"
            app:boxStrokeColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="22sp"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="#9f9f9f"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            app:boxStrokeColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="22sp"
            android:textColor="#000000"
            app:hintTextColor="@color/black"
            android:textColorHint="#9f9f9f"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:hint="@string/phone_number"
            app:boxStrokeColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="22sp"
            android:textColor="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="#9f9f9f"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            app:boxStrokeColor="@color/black"
            android:hint="@string/password"
            android:textSize="22sp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:hintTextColor="@color/black"
            android:textColorHint="#9f9f9f">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        <Button-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#00000000"-->
<!--            android:text="@string/forgot_password"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_gravity="right"-->
<!--            android:hapticFeedbackEnabled="true"-->
<!--            tools:ignore="RtlHardcoded" />-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_marginTop="20sp"
            android:text="@string/create_account"
            android:onClick="registerUser"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:hapticFeedbackEnabled="true"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:text="@string/already_have_an_account_login"
            android:textColor="#000"
            android:textAllCaps="true"
            android:id="@+id/go_back"
            android:onClick="loginIn"
            android:hapticFeedbackEnabled="true"
            tools:ignore="VisualLintButtonSize" />


    </LinearLayout>



</LinearLayout>