<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        android:background="#bab8a9">
        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/p_icon"
            android:layout_centerVertical="true"/>


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yasef__ahnaf"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/montserrat_bold"
            android:layout_toEndOf="@+id/profile_icon"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yasef_ahnaf"
            android:textSize="14sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/montserrat_bold"
            android:layout_toEndOf="@+id/profile_icon"
            android:layout_below="@+id/username"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">
        
        <com.google.android.material.card.MaterialCardView
            android:layout_width="0sp"
            android:layout_height="125sp"
            android:layout_weight="1"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20sp">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>